--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   provider: ^6.1.1
   supabase_flutter: ^2.0.2
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
