--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   cloud_firestore: ^4.13.6
-  provider: ^6.1.1
   supabase_flutter: ^2.0.2
   google_sign_in: ^6.1.6
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
