--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   supabase_flutter: ^2.0.2
   google_sign_in: ^6.1.6
   get: ^4.6.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
